--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     
-    <img src="unlock.svg" alt="">
+    <img src="unlock.svg" alt="Cadeado fechado">
+    <h2 class="titulo-principal">Gerador de Senhas</h2>
+    <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatoria e segura</h3>
+
+
 </body>
 </html>
